Fix and improve random stuff * avoid using portals for popovers where possible (toolbar works well) * not using portals enables easier styling * just cut off file info on overflow as with elipses it makes no sense * simplify toolbar even more * replace preview toolbar with new components

--- a/resources/style/content.scss
+++ b/resources/style/content.scss
@@ -124,8 +124,10 @@
   position: relative;
   overflow: hidden;
 
-  .h4 {
+  h4 {
     grid-area: title;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   &[aria-selected='true'] .thumbnail-img {
@@ -230,6 +232,7 @@
 
 // THUMBNAIL LOADER
 .donut-loading {
+  display: inline-block;
   width: 50%;
   height: 50%;
   margin: 25%;
