--- a/resources/style/inspector.scss
+++ b/resources/style/inspector.scss
@@ -1,7 +1,6 @@
 ///////////////////////////////// Inspector /////////////////////////////////
 #inspector {
   grid-area: inspector;
-  overflow: auto;
   flex-shrink: 0;
   width: var(--inspector-width);
   overflow-x: hidden;
@@ -42,13 +41,12 @@
   grid-template-columns: auto 1fr;
   grid-column-gap: 1rem;
   grid-row-gap: 0.25rem;
-  height: fit-content;
+}
 
-  > div {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+.file-info-key,
+.file-info-value {
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .file-info-key {
