--- a/resources/style/settings.scss
+++ b/resources/style/settings.scss
@@ -1,11 +1,7 @@
 .settings {
   max-width: 22rem;
   padding: 1rem;
-  overflow-y: auto;
-
-  // .custom-icon {
-  //   color: $dark-gray4;
-  // }
+  overflow-x: auto;
 
   .bp3-drawer-header,
   .bp3-drawer-body,
